Refactor code to use MongoDB ObjectId for ID fields
Convert ID fields to MongoDB ObjectId for consistency and better integration with MongoDB operations. This change ensures data integrity and alignment with MongoDB standards. No impact on functionality observed.

Refactor code to use MongoDB ObjectId for ID fields

Convert ID fields to MongoDB ObjectId for consistency and integration with MongoDB operations. Ensures data integrity and aligns with standards. No observed impact on functionality. This change enhances data handling in the application.

#NoIssue

--- a/src/app/components/attribute/add-attribute/add-attribute.component.html
+++ b/src/app/components/attribute/add-attribute/add-attribute.component.html
@@ -47,7 +47,7 @@
                 }"
                 id="modelId"
               >
-                <option *ngFor="let modelObj of modelDictionary; let i = index" value="{{ modelObj.id }}">
+                <option *ngFor="let modelObj of modelDictionary; let i = index" value="{{ modelObj._id }}">
                   {{ modelObj.name }}
                 </option>
               </select>
