--- a/src/app/components/connection/connection-list/connection-list.component.html
+++ b/src/app/components/connection/connection-list/connection-list.component.html
@@ -16,9 +16,10 @@
               : {
                   id: 'connectionListPagination',
                   itemsPerPage: 5,
-                  currentPage: connectionListPage
+                  currentPage: connectionListPage,
                 }
-        ">
+        "
+      >
         <td>
           {{ connectionObj.name }}
           <div class="deviceid">{{ connectionObj._id }}</div>
@@ -42,21 +43,24 @@
               type="button"
               class="btn btn-success btn-sm move-right"
               id="edit-connection"
-              (click)="editConnection(connectionObj)">
+              (click)="editConnection(connectionObj)"
+            >
               <i class="bi bi-pen"></i>
             </button>
             <button
               type="button"
               id="delete-connection"
               class="btn btn-danger btn-sm"
-              (click)="deleteConnection(connectionObj._id)">
+              (click)="deleteConnection(connectionObj._id)"
+            >
               <i class="bi bi-trash"></i>
             </button>
             <button
               type="button"
               id="clone-connection"
               class="btn btn-info btn-sm"
-              (click)="cloneConnection(connectionObj._id)">
+              (click)="cloneConnection(connectionObj._id)"
+            >
               <i class="bi bi-copy"></i>
             </button>
           </div>
