--- a/src/app/components/floors/floor-list/floor-list.component.html
+++ b/src/app/components/floors/floor-list/floor-list.component.html
@@ -15,10 +15,11 @@
               : {
                   id: 'floorPagination',
                   itemsPerPage: 5,
-                  currentPage: floorListPage
+                  currentPage: floorListPage,
                 }
-        ">
-        <td [tooltip]="floor.id">
+        "
+      >
+        <td [tooltip]="floor.id.toString()">
           {{ floor.name }}<br />
           <div class="text-body-tertiary small p-2">
             {{ floor.address.street }}<br />
