--- a/src/app/components/floors/add-floor/add-floor.component.html
+++ b/src/app/components/floors/add-floor/add-floor.component.html
@@ -2,7 +2,7 @@
   <h3><i class="bi bi-building"></i> Add Floor</h3>
   <form [formGroup]="floorForm" (ngSubmit)="submitForm()" class="g-3 needs-validation" novalidate>
     <div class="form-group mb-3">
-      <label for="id" class="form-label">Id: {{ this.floorForm.controls.id.value }} </label>
+      <label for="id" class="form-label">Id: {{ this.floorForm.controls._id.value }} </label>
     </div>
 
     <div class="col border">
@@ -18,7 +18,8 @@
             'is-invalid': this.floorForm.controls.name.status !== 'VALID',
             'is-valid': this.floorForm.controls.name.status === 'VALID',
             'form-control': true,
-          }"></textarea>
+          }"
+        ></textarea>
         <div *ngIf="this.floorForm.controls.name.errors" class="invalid-feedback">
           <div *ngIf="this.floorForm.controls.name.errors.required">Name is required</div>
           <div *ngIf="this.floorForm.controls.name.errors.minlength">Name must be at least 4 characters</div>
@@ -39,7 +40,8 @@
                   'is-invalid': this.floorForm.controls.address.controls.street.status !== 'VALID',
                   'is-valid': this.floorForm.controls.address.controls.street.status === 'VALID',
                   'form-control': true,
-                }" />
+                }"
+              />
               <div *ngIf="this.floorForm.controls.address.controls.street.errors" class="invalid-feedback">
                 <div *ngIf="this.floorForm.controls.address.controls.street.errors.required">Street is required</div>
                 <div *ngIf="this.floorForm.controls.address.controls.street.errors.minlength">
@@ -60,7 +62,8 @@
                   'is-invalid': this.floorForm.controls.address.controls.city.status !== 'VALID',
                   'is-valid': this.floorForm.controls.address.controls.city.status === 'VALID',
                   'form-control': true,
-                }" />
+                }"
+              />
               <div *ngIf="this.floorForm.controls.address.controls.city.errors" class="invalid-feedback">
                 <div *ngIf="this.floorForm.controls.address.controls.city.errors.required">City is required</div>
                 <div *ngIf="this.floorForm.controls.address.controls.city.errors.minlength">
@@ -81,7 +84,8 @@
                   'is-invalid': this.floorForm.controls.address.controls.country.status !== 'VALID',
                   'is-valid': this.floorForm.controls.address.controls.country.status === 'VALID',
                   'form-control': true,
-                }" />
+                }"
+              />
               <div *ngIf="this.floorForm.controls.address.controls.country.errors" class="invalid-feedback">
                 <div *ngIf="this.floorForm.controls.address.controls.country.errors.required">country is required</div>
                 <div *ngIf="this.floorForm.controls.address.controls.country.errors.minlength">
@@ -102,7 +106,8 @@
                   'is-invalid': this.floorForm.controls.address.controls.postcode.status !== 'VALID',
                   'is-valid': this.floorForm.controls.address.controls.postcode.status === 'VALID',
                   'form-control': true,
-                }" />
+                }"
+              />
               <div *ngIf="this.floorForm.controls.address.controls.postcode.errors" class="invalid-feedback">
                 <div *ngIf="this.floorForm.controls.address.controls.postcode.errors.required">
                   postcode is required
@@ -137,10 +142,12 @@
                       'is-invalid': this.floorForm.controls.dimension.at(i).controls.description.status !== 'VALID',
                       'is-valid': this.floorForm.controls.dimension.at(i).controls.description.status === 'VALID',
                       'form-control': true,
-                    }"></textarea>
+                    }"
+                  ></textarea>
                   <div
                     *ngIf="this.floorForm.controls.dimension.at(i).controls.description.errors"
-                    class="invalid-feedback">
+                    class="invalid-feedback"
+                  >
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.description.errors?.required">
                       description is required
                     </div>
@@ -164,7 +171,8 @@
                       'is-invalid': this.floorForm.controls.dimension.at(i).controls.xPos.status !== 'VALID',
                       'is-valid': this.floorForm.controls.dimension.at(i).controls.xPos.status === 'VALID',
                       'form-control': true,
-                    }" />
+                    }"
+                  />
                   <div *ngIf="this.floorForm.controls.dimension.at(i).controls.xPos.errors" class="invalid-feedback">
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.xPos.errors?.required">
                       X position is required
@@ -187,7 +195,8 @@
                       'is-invalid': this.floorForm.controls.dimension.at(i).controls.yPos.status !== 'VALID',
                       'is-valid': this.floorForm.controls.dimension.at(i).controls.yPos.status === 'VALID',
                       'form-control': true,
-                    }" />
+                    }"
+                  />
                   <div *ngIf="this.floorForm.controls.dimension.at(i).controls.yPos.errors" class="invalid-feedback">
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.yPos.errors?.required">
                       Y is required
@@ -210,7 +219,8 @@
                       'is-invalid': this.floorForm.controls.dimension.at(i).controls.hPos.status !== 'VALID',
                       'is-valid': this.floorForm.controls.dimension.at(i).controls.hPos.status === 'VALID',
                       'form-control': true,
-                    }" />
+                    }"
+                  />
                   <div *ngIf="this.floorForm.controls.dimension.at(i).controls.hPos.errors" class="invalid-feedback">
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.hPos.errors?.required">
                       H is required
@@ -235,7 +245,8 @@
                       'is-invalid': this.floorForm.controls.dimension.at(i).controls.x.status !== 'VALID',
                       'is-valid': this.floorForm.controls.dimension.at(i).controls.x.status === 'VALID',
                       'form-control': true,
-                    }" />
+                    }"
+                  />
                   <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x.errors" class="invalid-feedback">
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x.errors?.required">X is required</div>
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x.errors?.minlength">
@@ -256,7 +267,8 @@
                       'is-invalid': this.floorForm.controls.dimension.at(i).controls.y.status !== 'VALID',
                       'is-valid': this.floorForm.controls.dimension.at(i).controls.y.status === 'VALID',
                       'form-control': true,
-                    }" />
+                    }"
+                  />
                   <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y.errors" class="invalid-feedback">
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y.errors?.required">Y is required</div>
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y.errors?.minlength">
@@ -277,7 +289,8 @@
                       'is-invalid': this.floorForm.controls.dimension.at(i).controls.h.status !== 'VALID',
                       'is-valid': this.floorForm.controls.dimension.at(i).controls.h.status === 'VALID',
                       'form-control': true,
-                    }" />
+                    }"
+                  />
                   <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h.errors" class="invalid-feedback">
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h.errors?.required">h is required</div>
                     <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h.errors?.minlength">
