--- a/src/app/components/attribute-dictionary/attribute-dictionary-list/attribute-dictionary-list.component.html
+++ b/src/app/components/attribute-dictionary/attribute-dictionary-list/attribute-dictionary-list.component.html
@@ -22,7 +22,7 @@
                     currentPage: attributeDictionaryPage
                   }
           ">
-          <td tooltip="{{ attributeDictionary._id }}">{{ attributeDictionary.name }}</td>
+          <td title="{{ attributeDictionary._id }}">{{ attributeDictionary.name }}</td>
           <td>{{ attributeDictionary.category }}</td>
           <td>{{ attributeDictionary.type }}</td>
           <td>{{ attributeDictionary.component }}</td>
