--- a/src/app/components/models/model-list/model-list.component.html
+++ b/src/app/components/models/model-list/model-list.component.html
@@ -19,8 +19,7 @@
                   itemsPerPage: 10,
                   currentPage: modelListPage,
                 }
-        "
-      >
+        ">
         <td>
           {{ model.name }}
           <p class="fs-7 fw-lighter deviceid">{{ model._id }}</p>
@@ -59,8 +58,7 @@
       data-bs-toggle="button"
       autocomplete="off"
       aria-pressed="true"
-      (click)="AddModel()"
-    >
+      (click)="AddModel()">
       <i class="bi bi-plus-lg"></i> Add
     </button>
   </div>
