--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -97,7 +97,7 @@
       </div>
     </main>
     <footer style="vertical-align: auto; margin-left: auto; margin-right: auto">
-      <div class="row">
+      <div class="row" style="height: fit-content">
         <div class="col-9">
           <div class="p-2">
             © 2022-{{ currentYearLong() }} Copyright:
