--- a/src/app/components/attribute/attribute-list/attribute-list.component.html
+++ b/src/app/components/attribute/attribute-list/attribute-list.component.html
@@ -24,27 +24,27 @@
                 }
         ">
         <td>
-          <div tooltip="{{ attribute._id }}">#</div>
+          <div title="{{ attribute._id }}">#</div>
         </td>
         <td>
-          <a href="edit-device/{{ attribute.deviceId }}" tooltip="{{ attribute.deviceId }}">{{
-            findDeviceName(attribute.deviceId)
+          <a href="edit-device/{{ attribute.deviceId }}" title="{{ attribute.deviceId }}">{{
+            findDeviceName(attribute.deviceId || '')
           }}</a>
         </td>
         <td>
-          <a href="edit-model/{{ attribute.modelId }}" tooltip="{{ attribute.modelId }}">{{
-            findModelName(attribute.modelId)
+          <a href="edit-model/{{ attribute.modelId }}" title="{{ attribute.modelId }}">{{
+            findModelName(attribute.modelId || '')
           }}</a>
         </td>
         <td>
-          <a href="edit-connection/{{ attribute.connectionId }}" tooltip="{{ attribute.connectionId }}">{{
-            findConnectionName(attribute.connectionId)
+          <a href="edit-connection/{{ attribute.connectionId }}" title="{{ attribute.connectionId }}">{{
+            findConnectionName(attribute.connectionId || '')
           }}</a>
         </td>
         <td>
           <a
             href="edit-attribute-dictionary/{{ attribute.attributeDictionaryId }}"
-            tooltip="{{ attribute.attributeDictionaryId }}"
+            title="{{ attribute.attributeDictionaryId }}"
             >{{ findAttributeDictionary(attribute.attributeDictionaryId) }}</a
           >
         </td>
