--- a/src/app/components/attribute/attribute-list/attribute-list.component.html
+++ b/src/app/components/attribute/attribute-list/attribute-list.component.html
@@ -83,9 +83,11 @@
   <pagination-controls (pageChange)="attributePage = $event" id="attributeListPagination"></pagination-controls>
 </div>
 
-<!-- <div>attributeComponent: {{ this.attributeComponent }}</div>
-<div>attributeComponentObject: {{ this.attributeComponentObject }}</div>
-<div>(attributeComponent == '') {{ attributeComponent == '' }}</div> -->
+<div class="fs-7 fw-lighter deviceid">attributeComponent: {{ this.attributeComponent }}</div>
+<div class="fs-7 fw-lighter deviceid">attributeComponentObject: {{ this.attributeComponentObject }}</div>
+<div class="fs-7 fw-lighter deviceid">attributeComponent === '': {{ attributeComponent === '' }}</div>
+<div class="fs-7 fw-lighter deviceid">attributeComponent === undefined: {{ attributeComponent === undefined }}</div>
+<div class="fs-7 fw-lighter deviceid">component: {{ component }}</div>
 
 <app-log
   *ngIf="attributeComponent === '' || attributeComponent === undefined"
